ensure sub menus are visible on mobile

--- a/sass/custom/objects/_nav.scss
+++ b/sass/custom/objects/_nav.scss
@@ -105,6 +105,7 @@
         position: relative;
         border: 0;
 				opacity: 1;
+				z-index: 0;
       }
 
       & a {
